--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.8",
@@ -12,6 +15,8 @@
     "@types/node": "^12.19.12",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "dompurify": "^2.2.6",
+    "font-awesome": "^4.7.0",
     "radium": "^0.26.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -45,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/dompurify": "^2.2.0",
     "@types/react-router-dom": "^5.1.7"
   }
 }
