--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^12.19.12",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "classnames": "^2.2.6",
     "dompurify": "^2.2.6",
     "font-awesome": "^4.7.0",
     "radium": "^0.26.1",
