--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "classnames": "^2.2.6",
-    "dompurify": "^2.2.6",
+    "dompurify": "^3.2.6",
+    "dotenv": "^17.0.1",
     "font-awesome": "^4.7.0",
     "radium": "^0.26.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
+  },
+  "overrides": {
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
